@@ -70,6 +70,16 @@ CHANGES SINCE 1.4
 
 18. New Examples: dynamic_css and dynamic_css2.
 
+19. Change: in debug mode, cgi scripts will show HTML error messages, not just templates, provided they errors occur after pragma template / unrestricted_template.
+
+20. Change: in debug mode, cgi script HTML error messages have been updated to a more modern look using CSS styling.
+
+21. Fix: templates no longer run if the main script has an error.
+
+22. Change: cgi script HTML error messages appear in all software development cycle settings except maintenance, or debug mode, or maintnance plus debug mode.  The message has been updated to newer HTML standards.  gcc-style errors is now selectable: it affects the display on the web page but errors logged to the server will still be gcc-style.
+
+23. Change: different cgi script templates produce error messages in formats suitable for the template type.
+
 ??. Around parser.adb 5812: doesn't allow mixing of shell and adascript parameters in a pipeline.  Fix this??
 
 
